# mcp-crawl4ai-rag

./: .dockerignore  .env.docker  .env.example  .gitignore  .mcp.json.windows  .mcp.json.wsl  .mypy.ini  .pre-commit-config.yaml  API_REFERENCE.md  AzuriteConfig  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  CONTRIBUTING.md  Dockerfile  README.md  TESTING_QUICK_START.md  TEST_COVERAGE_SUMMARY.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  __azurite_db_table__.json  diagnose_copilot.ps1  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run_mcp.py  sitecustomize.py  test_environment.py
.claude/agents/: docs-architect.md  reference-builder.md
.claude/docs/: README.md  SETUP-SUMMARY.md
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  docker.yml  lint.yml  release.yml  test.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_current_state.md  project_overview.md  project_structure.md  project_tracking_workflow.md  suggested_commands.md  task_completion_checklist.md
crawl4ai_mcp/: __init__.py  __main__.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CI_CD.md  CLAUDE_DESKTOP_SETUP.md  CODE_QUALITY_IMPROVEMENTS.md  CONTRIBUTING.md  CRAWLING_STRATEGIES_GUIDE.md  DOCKER_SETUP.md  DOCUMENTATION_ORGANIZATION.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  DUAL_MODE_SETUP.md  GRAPHRAG_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_V1.3.0.md  MODERNIZATION_SUMMARY.md  NEW_FEATURES_FINAL_REPORT.md  NEW_FEATURES_GUIDE.md  NEW_FEATURES_IMPLEMENTATION.md  PROJECT_MANAGEMENT.md  PROJECT_STATUS.md  QUICK_START.md  README.md  REFACTORING_PLAN.md  WORKFLOW_QUICK_REFERENCE.md
docs/archive/: ALL_FIXES_COMPLETE.md  ARCHIVE_TASK_SUMMARY.md  ARCHIVE_VALIDATION_REPORT.md  CI_CD_SETUP_SUMMARY.md  DEVELOPMENT_SPRINT_COMPLETE.md  DOCKER_BUILD_FIX.md  DOCKER_NEO4J_TESTING.md  DOCUMENTATION_ARCHIVE_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPORT_FIX.md  IMPROVEMENTS_COMPLETE.md  INDEX.md  MARKDOWN_STANDARDIZATION_COMPLETE.md  MARKDOWN_STANDARDIZATION_REPORT.md  MODERNIZATION_SUMMARY.md  NEO4J_CONNECTION_FIX.md  NEW_FEATURES_IMPLEMENTATION.md  README.md  SETUP_COMPLETE.md
docs/development/: BATCH_EXTRACTION_IMPLEMENTATION.md  BATCH_FUNCTION_REFACTORING.md  CI_CD_IMPLEMENTATION_REPORT.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  DEVELOPMENT_COMPLETE_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION_TESTS_REPORT.md  INTEGRATION_TESTS_SUMMARY.md  INTEGRATION_TEST_REPORT.md  PHASE1_COMPLETION_REPORT.md  PHASE1_REFACTORING_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE2_TOOL_EXTRACTION_PLAN.md  PRIORITY_2_REFACTORING_SUMMARY.md  RAG_PIPELINE_TEST_REPORT.md  REFACTORING_ARCHITECTURE.md  REFACTORING_CHECKLIST.md  REFACTORING_COMPLETE.md  REFACTORING_COMPLETE_SUMMARY.md  REFACTORING_README.md  REFACTORING_REPORT.md  REFACTORING_STATUS.md  REFACTORING_SUMMARY.md  TEST_COVERAGE_IMPROVEMENT_REPORT.md  TEST_SUMMARY.md  TOOL_EXTRACTION_COMPLETE.md  WORK_COMPLETED_SUMMARY.md
docs/fixes/: AZURE_OPENAI_FIX.md  GRAPHRAG_FIX.md  IMPORT_FIX_APPLIED.md  INDEX.md  LAZY_LOADING_CLEANUP_FIX.md  NEO4J_FIX.md  STDOUT_CONTAMINATION_FIX.md  WSL2_DOCKER_INTEGRATION_FIX.md
docs/guides/: CROSS_PLATFORM_MCP_SETUP.md  (+8 more)
knowledge_graphs/: __init__.py  ai_hallucination_detector.py  ai_script_analyzer.py  document_entity_extractor.py  document_graph_queries.py  document_graph_validator.py  hallucination_reporter.py  knowledge_graph_validator.py  parse_repo_into_neo4j.py  query_knowledge_graph.py  test_script.py
project_tracking/: README.md
scripts/: README.md  diagnose_playwright.py  mcp-launcher.cmd  mcp-launcher.ps1  mcp-launcher.sh  run_docker.ps1  run_mcp.bat  run_mcp.sh  run_tests_with_coverage.sh  setup-mcp-config.ps1  setup-mcp-config.sh  setup_vscode_python.ps1  sprint_helper.py  task_helper.py  update_dependencies.ps1  validate_deployment.py  validate_token_limit_fix.py  validate_workflows.py  validate_workflows.sh
src/: __init__.py  config.py  crawl4ai_mcp.py  crawl_helpers.py  crawling_strategies.py  crawling_utils.py  env_validators.py  error_handlers.py  github_utils.py  graphrag_utils.py  initialization_utils.py  knowledge_graph_commands.py  logging_config.py  memory_monitor.py  rag_utils.py  response_size_manager.py  search_strategies.py  search_utils.py  server.py  stdout_safety.py  timeout_utils.py  utils.py  validators.py
tests/: __init__.py  conftest.py  test_ai_hallucination_detector.py  test_browser_validation.py  test_chunk_content.py  test_config.py  test_crawl_helpers_batch.py  test_crawling_strategies.py  test_crawling_utils.py  test_env_validators.py  test_error_handlers.py  test_github_utils.py  test_graphrag_integration.py  test_graphrag_tools.py  test_graphrag_utils.py  test_knowledge_graph.py  test_knowledge_graph_commands.py  test_lazy_loading.py  test_lazy_loading_cleanup.py  test_mcp_tools.py  test_memory_monitor.py  test_new_features.py  test_parse_repo_neo4j.py  test_perform_rag_query_source_filter.py  test_response_size_manager.py  test_search_strategies.py.skip  test_search_utils.py  test_sitecustomize.py  test_source_filter_bug_fix.py  test_stdout_safety.py  test_utils.py  test_validators.py
(+165 files in other folders)
